# TrackPro

./: .env  .env.example  .gitignore  2FA_SETUP_INSTRUCTIONS.md  ACCOUNT_DELETION_COMPLIANCE_GUIDE.md  ACCOUNT_PAGE_INTEGRATION.md  ACCOUNT_PAGE_MIGRATION_GUIDE.md  ACCOUNT_PAGE_README.md  AI_COACH_CRASH_FIX_SUMMARY.md  AI_COACH_VOLUME_CONTROL_GUIDE.md  ARCHITECTURE_PLAN.md  AVATAR_SYSTEM_DOCUMENTATION.md  CHANGELOG.md  CLEANUP_COMPLETED.md  CODE_SIGNING_SETUP.md  COMMUNITY_SYSTEM_README.md  Changes.md  DISCORD_SETUP_GUIDE.md  EMAILJS_SETUP_GUIDE.md  HIDReader.sln  HIDReader.vcxproj  HIDReader.vcxproj.filters  HidHide_Troubleshooting.md  INSTALLATION_TROUBLESHOOTING.md  IRACING_TELEMETRY_INTEGRATION.md  LICENSE  NETWORK_VOICE_SERVER_README.md  PEDAL_PERFORMANCE_NOTES.md  PERFORMANCE_IMPROVEMENTS.md  PHASE4_COMPLETION_STATUS.md  PyQt6_Migration_Guide.md  README.md  README_BUILD_OPTIMIZATIONS.md  REORGANIZATION_PLAN.md  SECTOR_TIMING_INTEGRATION_GUIDE.md  SECURE_SESSION_IMPLEMENTATION.md  SECURITY_MIGRATION_GUIDE.md  THRESHOLD_ASSIST_README.md  TWILIO_SETUP_GUIDE.md  TrackPro.manifest  (+182 more)
.cursor/rules/: project_structure.mdc
.venv_backup/Scripts/: activate
GUI/: CMakeLists.txt  CMakeLists.txt.user.0d5f87c  mainwindow.cpp  mainwindow.h
Supabase/: __init__.py  auth.py  client.py  database.py
backend/: config.py  logging_config.py  main.py  requirements.txt
backend/api/: __init__.py  auth_middleware.py  connection_manager.py  message_router.py  pedals_api.py
docs/: AUTOMATED_SOCIAL_FEED.md  VOICE_CHAT_WEBRTC_TODO.md  race_coach_refactoring.md  telemetry_data_saving_feature.md
docs/cert/: simcoaches.cer
docs/images/: README.md
frontend/: .eslintrc.js  README.md  index.html  jest.config.js  main.js  package-lock.json  package.json  preload.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  setupTests.ts
future/eye_tracking/: eye_tracking_manager.py  eye_tracking_overlay.py  eye_tracking_settings.py
src/: CalibrationHandler.h  ReadingWriting.cpp  RegistryHandler.cpp  RegistryHandler.h  main.cpp
tmp/: load_demo_data.txt  ui.py.backup  ui.py.modified
tools/: fix_account_page_indentation.py
tools/HidHideHelper/: HidHideHelper.csproj  Program.cs  README.md  build.bat  build.py
trackpro/: TrackPro_Install_Debug.txt  __init__.py  auth_client.py  calibration.py  calibration_chart.py  config.py  hardware_input.py  hidhide.py  high_quality_voice_server.py  logging_config.py  main.py  modern_main.py  network_voice_server.py  output.py  simple_voice_client.py  simple_voice_server.py  ui.py  ui.py.bak  ui_backup.py  uicopy1.py  updater.py  voice_chat_server.py  voice_server_manager.py
trackpro/auth/: __init__.py  base_dialog.py  hierarchy_manager.py  login_dialog.py  oauth_handler.py  phone_verification_dialog.py  secure_session.py  (+7 more)
x64/: setup_script.iss
(+419 files in other folders)
